--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -6,6 +6,12 @@
     <title>Daily Calories</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        function toggleSubtable(meal_name) {
+            const subtable = document.getElementById('subtable-' + meal_name);
+            subtable.classList.toggle('hidden');
+        }
+    </script>
 </head>
 <body>
 
@@ -23,11 +29,18 @@
             </thead>
             <tbody>
                 {% for d in days %}
-                <tr class="hover">
+                <tr class="hover cursor-pointer" onclick="toggleSubtable('{{ d.date }}')">
                     <td class="px-4 py-2">{{ d.date }}</td>
                     <td class="px-4 py-2">{{ d.calories }}</td>
                     <td class="px-4 py-2">
                         <a href="{% url 'day' d.date %}" class="text-blue-500 underline">Details</a>
+                    </td>
+                </tr>
+                <tr id="subtable-{{ d.date }}" class="hidden">
+                    <td colspan="2">
+                        <div class="overflow-x-auto">
+                            {% include 'nutrition/meals.html' with meals=d.meals %}
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
