--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -47,6 +47,7 @@
             </tbody>
         </table>
     </div>
+    <a href="{% url 'add_portion' %}" class="text-blue-500 underline">New Portion</a>
 </div>
 
 </body>
