added note field input toi portion form

--- a/nutrition/templates/nutrition/add_portion.html
+++ b/nutrition/templates/nutrition/add_portion.html
@@ -39,6 +39,12 @@
                 <div>{{ form.meal }}</div>
             </div>
 
+            <!-- Note field (optional) -->
+            <div class="grid grid-cols-2 gap-4 items-center">
+                <label class="text-right label">Note (Optional)</label>
+                <div>{{ form.note }}</div>
+            </div>
+
             <!-- Submit button -->
             <div class="grid grid-cols-2 gap-4">
                 <div class="col-span-2 text-center">
