notes and skeleton local tailwind+daisyui

--- a/nutrition/templates/nutrition/day.html
+++ b/nutrition/templates/nutrition/day.html
@@ -1,11 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day Calories</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
+
     <script>
         function toggleSubtable(meal_name) {
             const subtable = document.getElementById('subtable-' + meal_name);
