--- a/nutrition/templates/nutrition/add_portion.html
+++ b/nutrition/templates/nutrition/add_portion.html
@@ -1,11 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Portion</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
 </head>
 <body>
     <h1 class="text-2xl font-bold mb-4">New Portion</h1>
