--- a/nutrition/templates/nutrition/day.html
+++ b/nutrition/templates/nutrition/day.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day Calories</title>
     <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
-
     <script>
         function toggleSubtable(meal_name) {
             const subtable = document.getElementById('subtable-' + meal_name);
@@ -22,7 +21,7 @@
 
     <div class="overflow-x-auto">
         <a href="{% url 'add_portion' %}?date={{ date }}" class="text-blue-500 underline">Add Portion</a>
-        <table class="table w-full">
+        <table class="day">
             <!-- Table Head -->
             <thead>
                 <tr>
