--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -6,21 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Calories</title>
     <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
-    <script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
+
+<script>
         function toggleSubtable(meal_name) {
             const subtable = document.getElementById('subtable-' + meal_name);
             subtable.classList.toggle('hidden');
         }
     </script>
+
+<script>
+
+    document.addEventListener('DOMContentLoaded', function() {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        events: '/nutrition/api/events/',       // Fetch events from the Django API endpoint
+        // eventColor: '#378006',        // Optional: Change event color   
+    });
+      calendar.render();
+    //   calendar.on('dateClick', function(info) {
+    //     console.log('clicked on ' + JSON.stringify(info));
+    // });
+    });
+
+    events: [
+    {
+      id: 'a',
+      title: 'my event',
+      start: '2018-09-01'
+    }
+  ]
+</script>
+
 </head>
 <body>
+    <div id='calendar'></div>
 
-<div class="container mx-auto mt-10">
+<!-- <div class="container mx-auto mt-10">
     <h1 class="text-2xl font-bold mb-4">Calories Calendar (Table)</h1>
 
     <div class="overflow-x-auto">
         <table class="nutrition days">
-            <!-- Table Head -->
             <thead>
                 <tr>
                     <th>Food</th>
@@ -49,7 +76,7 @@
         </table>
     </div>
     <a href="{% url 'add_portion' %}" class="text-blue-500 underline">New Portion</a>
-</div>
+</div> -->
 
 </body>
 </html>
