--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -7,76 +7,9 @@
     <title>Daily Calories</title>
     <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
-
-<script>
-        function toggleSubtable(meal_name) {
-            const subtable = document.getElementById('subtable-' + meal_name);
-            subtable.classList.toggle('hidden');
-        }
-    </script>
-
-<script>
-
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        initialView: 'dayGridMonth',
-        events: '/nutrition/api/events/',       // Fetch events from the Django API endpoint
-        // eventColor: '#378006',        // Optional: Change event color   
-    });
-      calendar.render();
-    //   calendar.on('dateClick', function(info) {
-    //     console.log('clicked on ' + JSON.stringify(info));
-    // });
-    });
-
-    events: [
-    {
-      id: 'a',
-      title: 'my event',
-      start: '2018-09-01'
-    }
-  ]
-</script>
-
 </head>
 <body>
-    <div id='calendar'></div>
-
-<!-- <div class="container mx-auto mt-10">
-    <h1 class="text-2xl font-bold mb-4">Calories Calendar (Table)</h1>
-
-    <div class="overflow-x-auto">
-        <table class="nutrition days">
-            <thead>
-                <tr>
-                    <th>Food</th>
-                    <th>Calories</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for d in days %}
-                <tr class="hover cursor-pointer {%cycle 'row-even' 'row-odd' %}" onclick="toggleSubtable('{{ d.date }}')">
-                    <td>{{ d.date }}</td>
-                    <td>{{ d.calories }}</td>
-                    <td>
-                        <a href="{% url 'day' d.date %}" class="text-blue-500 underline">Details</a>
-                    </td>
-                </tr>
-                <tr id="subtable-{{ d.date }}" class="hidden">
-                    <td colspan="3">
-                        <div class="overflow-x-auto">
-                            {% include 'nutrition/meals.html' with meals=d.meals %}
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <a href="{% url 'add_portion' %}" class="text-blue-500 underline">New Portion</a>
-</div> -->
-
+    {% include 'nutrition/days-calendar.html' %}
+    <!-- {% include 'nutrition/days-table.html' %} -->
 </body>
 </html>
