--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -33,19 +33,31 @@
 
     <div class="container mx-auto p-4">
         <!-- Tab Navigation -->
-        <div role="tablist" class="tabs tabs-bordered">
-            <a role="tab" class="tab tab-active" id="calendar_tab" onclick="showTab('days_calendar')">Calendar View</a>
-            <div id="days_calendar" class="tab-content">
+        <div role="tablist" class="tabs tabs-lifted">
+            <input
+                type="radio"
+                name="view_tabs"
+                role="tab"
+                class="tab"
+                aria-label="Calendar"
+                checked="checked" />
+
+            <div role="tabpanel" class="tab-content">
                 {% include 'nutrition/days-calendar.html' %}
             </div>
 
-            <a role="tab" class="tab" id="table_tab" onclick="showTab('days_table')">Table View</a>
-            <div id="days_table" class="tab-content hidden">
+            <input
+                type="radio"
+                name="view_tabs"
+                role="tab"
+                class="tab"
+                aria-label="Table" />
+
+            <div role="tabpanel" class="tab-content hidden">
                 {% include 'nutrition/days-table.html' %}
             </div>
         </div>
-        </div>
-     </div>
+    </div>
 
 </body>
 </html>
