--- a/nutrition/templates/nutrition/add_portion.html
+++ b/nutrition/templates/nutrition/add_portion.html
@@ -1,18 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Portion</title>
-    <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
-</head>
-<body>
+{% extends 'nutrition/base.html' %}
 
-    <div class="container mx-auto p-4">
-        User: {{ user.get_username }}
-    </div>
+{% block title %}Add Portion{% endblock %}
 
+{% block content %}
     <div class="container mx-auto py-8">
 
         <h1 class="text-2xl font-bold mb-4">New Portion</h1>
@@ -58,5 +48,4 @@
             </div>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
