--- a/nutrition/templates/nutrition/days.html
+++ b/nutrition/templates/nutrition/days.html
@@ -1,22 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Calories</title>
-    <link rel="stylesheet" href="{% static 'nutrition/css/styles.css' %}">
+{% extends 'nutrition/base.html' %}
+
+{% block title %}Daily Calories{% endblock %}
+
+{% block extra_header_content %}
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
-</head>
-<body>
+{% endblock %}
 
-    <div class="container mx-auto p-4">
-    <form action="{% url 'logout' %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Log Out '{{ user.get_username }}'</li></button>
-    </form>
-    </div>
-
+{% block content %}
     <div class="container mx-auto p-4">
         <!-- Tab Navigation -->
         <div role="tablist" class="tabs tabs-lifted">
@@ -44,6 +34,4 @@
             </div>
         </div>
     </div>
-
-</body>
-</html>
+{% endblock %}
