--- a/nutrition/templates/nutrition/day.html
+++ b/nutrition/templates/nutrition/day.html
@@ -2,6 +2,15 @@
 
 {% block title %}Meals {{ date }}{% endblock %}
 
+{% block extra_header_content %}
+<script>
+    function toggleSubtable(meal_name) {
+        const subtable = document.getElementById('subtable-' + meal_name);
+        subtable.classList.toggle('hidden');
+    }
+</script>
+{% endblock %}
+
 {% block content %}
 <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold mb-4">Meals {{ date }}</h1>
