--- a/nutrition/templates/nutrition/base.html
+++ b/nutrition/templates/nutrition/base.html
@@ -11,12 +11,7 @@
 <body>
 
     <header>
-        <div class="container mx-auto p-4">
-            <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit">Log Out '{{ user.get_username }}'</li></button>
-            </form>
-        </div>        
+        {% include 'nutrition/header.html' %}
     </header>
 
     <main>
