just print username, not an icon

--- a/nutrition/templates/nutrition/header.html
+++ b/nutrition/templates/nutrition/header.html
@@ -7,11 +7,7 @@
   <div class="flex-none">
     <div class="dropdown dropdown-end">
       <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <img
-            alt="Tailwind CSS Navbar component"
-            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
-        </div>
+          {{ user.username }}
       </div>
       <ul
         tabindex="0"
