--- a/nutrition/templates/nutrition/header.html
+++ b/nutrition/templates/nutrition/header.html
@@ -19,7 +19,12 @@
           </a>
         </li>
         <li><a>Settings</a></li>
-        <li><a>Logout</a></li>
+        <li>
+          <form method="POST" action="{% url 'logout' %}" id="logout-form" style="display:inline;">
+            {% csrf_token %}
+            <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer; padding: 0; font: inherit;">Logout</button>
+          </form>
+        </li>
       </ul>
     </div>
   </div>
