--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,2 +1,2 @@
 <h2>Logged Out!</h2>
-<a href="{% url 'login'%}">Click here to login again.</a>
+<a href="{% url 'nutrition_login'%}">Click here to login again.</a>
